--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -1,16 +1,80 @@
-.products-grid {
-  display: grid;
-  grid-template-columns: 1fr; /* Default to 1 column for mobile */
-  gap: 10px;
-  justify-content: center;
-  padding: 10px;
-  margin-top: 100px;
+.products-container {
+  padding-top: 200px; /* Increased padding to 150px */
 }
 
-/* For screens larger than 768px (tablet & laptops), switch to 2-column layout */
+.products-grid {
+display: grid;
+grid-template-columns: 1fr;
+gap: 10px;
+justify-content: center;
+padding: 10px;
+margin-top: 0;
+}
+
 @media (min-width: 768px) {
-  .products-grid {
-      grid-template-columns: 1fr 1fr;
-      margin-top: 100px;
-  }
+.products-grid {
+  grid-template-columns: 1fr 1fr;
+}
+}
+
+
+.product-image {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+}
+
+.ProductCard {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.ProductCard .card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.ProductCard .card-title {
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
+.ProductCard .card-text {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.ProductCard .dropdown {
+  margin-top: 1rem;
+}
+
+.ProductCard .btns {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.btns button {
+  margin-right: 10px;
+  border: 1px solid black;
+  padding: 5px 10px;
+  font-size: 1rem;
+}
+
+.btns button:hover {
+  border: 2px solid blue;
+}
+
+.btnPrice {
+  width: 50%;
+}
+
+.btnCart {
+  width: 50%;
 }
