--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,12 +8,12 @@
     width: 60%;
     margin: 0 auto;
     position: fixed;
-    top: 60px;
+    top: 50px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 100;
     border-radius: 15px;
-    height: 50px;
+    height: 60px;
 }
 
 .header h1 {
@@ -28,7 +28,7 @@
 .header-welcome {
     margin-right: auto;
     margin-left: auto;
-    padding-top: 5px;
+    padding-bottom: 15px;
     text-align: center;
 }
 
