--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,6 +1,7 @@
 .ProductCard {
     text-align: center;
     margin: 20px;
+    margin-top: 0px;
     padding: 5px;
     border-bottom: black 3px solid;
     display: flex;
