--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -5,6 +5,10 @@
     justify-content: center;
     padding: 10px;
   }
+ 
+.ProductCard {
+top: 100px;
+}
   
   /* For screens larger than 768px (tablet & laptops), switch to 2-column layout */
   @media (min-width: 768px) {
@@ -21,5 +25,4 @@
 
 .productCard {
   margin-top: 20px;
-
 }
